--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
+        //使用阿里最新的maven仓库地址加载更快
+        maven { url 'https://maven.aliyun.com/repository/public/' }
+        maven { url 'https://maven.aliyun.com/repository/google/' }
+        maven { url 'https://maven.aliyun.com/repository/central/' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin/' }
         google()
         mavenCentral()
     }
@@ -14,6 +19,11 @@ buildscript {
 
 allprojects {
     repositories {
+        //使用阿里最新的maven仓库地址加载更快
+        maven { url 'https://maven.aliyun.com/repository/public/' }
+        maven { url 'https://maven.aliyun.com/repository/google/' }
+        maven { url 'https://maven.aliyun.com/repository/central/' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin/' }
         google()
         mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
